Fix issue with floated block toolbar on adjecent floats
Fixes #3870

When you have multiple small blocks floated left, each blocks get a more and more indented block toolbar. At some point the block toolbar will be cropped by the viewport itself.

This PR adresses that by making it always leftalign. There appear to be no side-effects, but it would be good to test.

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -461,6 +461,9 @@
 		border: 1px solid $light-gray-500;
 		width: 100%;
 
+		// this prevents floats from messing up the position
+		position: absolute;
+
 		// remove stacked borders in inline toolbar
 		> div:first-child {
 			margin-left: -1px;
